<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.arch.starwarssearch.model.CharacterPresentation" />

        <import type="java.util.List" />

        <variable
            name="characters"
            type="List&lt;CharacterPresentation>" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.charactersearch.CharacterSearchFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <ProgressBar
                android:id="@+id/linear_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:indeterminate="true"
                android:visibility="gone" />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:cardBackgroundColor="@color/grey_100"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="false">
                <EditText
                    android:id="@+id/et_search_field"
                    style="@style/Widget.AppCompat.SearchView.ActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:hint="@string/character_name"
                    android:background="@android:color/transparent" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_characters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/characters_from_network"
                app:items="@{characters}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_character" />
        </LinearLayout>
    </LinearLayout>
</layout>